--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
-    "aubiojs": "^0.1.1"
+    "aubiojs": "^0.1.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
